# pydantic-forms

./: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  .stignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-release.yaml  pull-request.yml  run-linting-tests.yml  run-unit-tests.yml
.workflows/: run-unit-tests.yml
docs/: index.md
docs/concepts/: required-field-handling.md
pydantic_forms/: __init__.py  core.py  exceptions.py  settings.py  types.py  validators.py
pydantic_forms/core/: __init__.py  asynchronous.py  shared.py  sync.py  translations.py
pydantic_forms/exception_handlers/: fastapi.py
pydantic_forms/utils/: json.py  json_utils.py  required.py  schema.py
pydantic_forms/validators/: __init__.py  constants.py  helpers.py
pydantic_forms/validators/components/: accept.py  callout.py  choice.py  choice_list.py  contact_person.py  contact_person_list.py  display_subscription.py  divider.py  hidden.py  label.py  list.py  list_of_one.py  list_of_two.py  long_text.py  markdown.py  migration_summary.py  organisation_id.py  read_only.py  read_only_field.py  timestamp.py  unique_constrained_list.py
tests/unit_tests/: helpers.py  test_accept.py  test_callout.py  test_choice.py  test_choice_list.py  test_constrained_list.py  test_contact_person.py  test_contact_person_list.py  test_contact_persons.py  test_core.py  test_core_async.py  test_default_factory.py  test_display_subscription.py  test_divider.py  test_generic_validators.py  test_hidden.py  test_label.py  test_list_item_lenght.py  test_list_max_items.py  test_list_min_items.py  test_list_of_one.py  test_list_of_two.py  test_long_text.py  test_markdown.py  test_migration_summary.py  test_organisation_id.py  test_post_form.py  test_read_only_field.py  test_shared.py  test_timestamp.py  test_utils_dict_without_none.py  test_utils_from_serializable.py  test_utils_to_serializable.py
tests/unit_tests/exception_handlers/: test_fastapi.py
tests/unit_tests/utils/: test_required.py
