[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pydantic_forms"
dist-name = "pydantic-forms"
author = "SURF"
author-email = "automation-beheer@surf.nl"
home-page = "https://github.com/workfloworchestrator/pydantic-forms"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
requires = [
    "more-itertools",
    "pydantic[email] >= 2.5.1",
]
description-file = "README.md"
requires-python = ">=3.9,<=3.13"

[tool.flit.metadata.urls]
Documentation = "https://github.com/workfloworchestrator/pydantic-forms/blob/main/README.md"

[tool.flit.metadata.requires-extra]
test = [
    "apache-license-check",
    "black",
    "structlog",
    "jsonref",
    "mypy==1.6.1",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
    "types-Deprecated",
    "types-certifi",
    "types-itsdangerous",
    "types-pkg_resources",
    "types-python-dateutil",
    "types-pytz",
    "types-toml",
    "types-ujson",
    "types-orjson"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-render-swagger-plugin",
    "mkdocs-include-markdown-plugin"
]
dev = [
    "toml",
    "bumpversion",
    "mypy_extensions",
    "pre-commit",
    "pydocstyle",
    "python-dotenv",
    "watchdog",
]
#rapidjson = [
#    "rapidjson >=1.0.0,<2.0.0",
#]
orjson = [
    "orjson >=3.6.0,<4.0.0",
]
fastapi = [
    "fastapi >=0.80.0"
]

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''

[tool.nitpick]
style="github://workfloworchestrator/nitpick-style@main/nitpick-style-orchestrator-core.toml"

[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "src",
    "venv",
    ".venv",
    "docs",
]
ignore = [
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "N806",
    "B905",
    "N805",
    "B904",
    "N803",
    "N801",
    "N815",
    "N802",
]
line-length = 120
select = ["B", "C", "D", "E", "F", "I", "N", "RET", "S", "T", "W"]
target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "B033", "N816", "N802"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-third-party = ["pydantic"]
