[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[project]
name = "pydantic-forms"
version = "2.5.0"
description = "Pydantic forms"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "SURF", email = "automation-beheer@surf.nl" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "more-itertools",
    "pydantic[email]>=2.9.0",
    "pydantic-i18n==0.4.5"
]

[project.urls]
Documentation = "https://github.com/workfloworchestrator/pydantic-forms/blob/main/README.md"
Homepage = "https://github.com/workfloworchestrator/pydantic-forms"

[project.optional-dependencies]
test = [
    "apache-license-check",
    "black",
    "structlog",
    "jsonref",
    "mypy==1.18.2",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
    "types-Deprecated",
    "types-certifi",
    "types-python-dateutil",
    "types-pytz",
    "types-toml",
    "types-ujson",
    "types-orjson"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-render-swagger-plugin",
    "mkdocs-include-markdown-plugin"
]
dev = [
    "toml",
    "bumpversion",
    "mypy_extensions",
    "pre-commit",
    "pydocstyle",
    "python-dotenv",
    "watchdog",
]
#rapidjson = [
#    "rapidjson >=1.0.0,<2.0.0",
#]
orjson = [
    "orjson >=3.6.0,<4.0.0",
]
fastapi = [
    "fastapi >=0.80.0"
]

[tool.uv.build-backend]
module-root = ""

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''

[tool.nitpick]
style="github://workfloworchestrator/nitpick-style@main/nitpick-style-orchestrator-core.toml"

[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "dist",
    "src",
    "venv",
    ".venv",
    "docs",
]
lint.ignore = [
    "B904",
    "B905",
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "E501",
    "N801",
    "N802",
    "N803",
    "N805",
    "N806",
    "N815",
    "S101", # use of assert
]
line-length = 120
lint.select = ["B", "C", "D", "E", "F", "I", "N", "RET", "S", "T", "W"]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B033",
    "D205",  # blank line required
    "N802",
    "N816",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pydantic"]

[tool.flake8]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202", "E501", "RST301", "RST304", "W503", "E203", "C417"]
exclude = [".git", ".cache", ".eggs", "__pycache__", "dist", "src", "crypt.py", "venv", ".venv"]
enable-extensions = ["G"]
select = ["B", "C", "D", "E", "F", "G", "I", "N", "S", "T", "W", "B902", "B903", "R"]
max-line-length = 120
ban-relative-imports = true
per-file-ignores = [
    "pydantic_forms/*: B902",
    "tests/*: S101",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-ignore-import-errors"
norecursedirs = [".git", "build", "dist", "*.egg", "__pycache__", ".cache", ".*", "docs"]
testpaths = ["tests"]
junit_suite_name = "pydantic_forms"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
markers = [
    "regression: Tests that cover bugs that are fixed to prevent them from regressing",
]
asyncio_mode = "auto"

[tool.mypy]
exclude = "(venv/*)"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
